fix: use of spacing-md instead of spacing-3x1

--- a/styles/main.css
+++ b/styles/main.css
@@ -1098,7 +1098,7 @@ img {
     width: 50px;
     height: 50px;
     border-radius: 50%;
-    margin: 0 var(--spacing-3xl);
+    margin: 0 var(--spacing-md);
     display: flex;
     align-items: center;
     justify-content: center;
